Updated error pages to have favicon info

--- a/src/main/resources/error/404.html
+++ b/src/main/resources/error/404.html
@@ -14,8 +14,10 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<!--suppress HtmlUnknownTarget -->
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>404 not found</title>
 
   <!-- Load kotlin.js, kotlinx-html.js, and main.js -->
