--- a/src/main/resources/error/400.html
+++ b/src/main/resources/error/400.html
@@ -14,13 +14,41 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<!--suppress HtmlUnknownTarget -->
 <html>
 <head>
-    <title>400 Bad Request</title>
+  <meta charset="UTF-8">
+  <title>400 Bad Request</title>
+
+  <!-- Load kotlin.js, kotlinx-html.js, and main.js -->
+  <script type="text/javascript" src="../kotlin.js"></script>
+  <script type="text/javascript" src="../kotlinx-html-js.js"></script>
+  <script type="text/javascript" src="../main.js"></script>
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon"      sizes="57x57"   href="../favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon"      sizes="60x60"   href="../favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon"      sizes="72x72"   href="../favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon"      sizes="76x76"   href="../favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon"      sizes="114x114" href="../favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon"      sizes="120x120" href="../favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon"      sizes="144x144" href="../favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon"      sizes="152x152" href="../favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon"      sizes="180x180" href="../favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32"   href="../favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96"   href="../favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16"   href="../favicon/favicon-16x16.png">
+
+  <!-- Favicon Manifest -->
+  <link rel="manifest" href="../favicon/manifest.json">
+
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-
-<h1>beep boop 400 bad request :(</h1>
-
+  <!-- TODO Replace this with kotlin code -->
+  <h1>beep boop 400 bad request :(</h1>
 </body>
 </html>
