--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -32,27 +32,26 @@
   <!-- Load main stylesheet for index.html -->
   <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
 
-  <!-- Favicon -->
-  <link rel="apple-touch-icon"      sizes="57x57"   href="favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon"      sizes="60x60"   href="favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon"      sizes="72x72"   href="favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon"      sizes="76x76"   href="favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon"      sizes="114x114" href="favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon"      sizes="120x120" href="favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon"      sizes="144x144" href="favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon"      sizes="152x152" href="favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon"      sizes="180x180" href="favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32"   href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96"   href="favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16"   href="favicon/favicon-16x16.png">
-
   <!-- Favicon Manifest -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="favicon/manifest.json">
 
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+
+  <!-- SEO Keywords -->
+  <meta name="keywords" content="discord,bot,nightfury,toothless,moderation,server,dragon,how to train your dragon">
+
+  <!-- Discord Embed -->
+  <meta property="og:title" content="NightFury">
+  <meta property="og:description"
+        content="NightFury is a multipurpose Discord bot for your server! It provides moderation, utility, wide-ranging customization, and other useful features!">
+  <meta property="og:image" content="https://nightfury.xyz/nightfury.jpg">
+
+  <!-- Twitter Embed -->
+  <meta property="twitter:title" content="NightFury">
+  <meta property="twitter:description"
+        content="NightFury is a multipurpose Discord bot for your server! It provides moderation, utility, wide-ranging customization, and other useful features!">
 </head>
 <body class="index">
 <!--
