--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NightFury</title>
 
   <!-- Load kotlin.js, kotlinx-html.js, and main.js -->
   <script type="text/javascript" src="kotlin.js"></script>
@@ -26,14 +25,14 @@
   <script type="text/javascript" src="main.js"></script>
 
   <!-- Load Fonts -->
-  <link rel="stylesheet" type="text/css" href="fonts/kung_fu_panda/stylesheet.css">
-  <link rel="stylesheet" type="text/css" href="fonts/kingthings_clarity/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="src/main/resources/fonts/kung_fu_panda/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="src/main/resources/fonts/kingthings_clarity/stylesheet.css">
 
   <!-- Load main stylesheet for index.html -->
-  <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+  <link rel="stylesheet" type="text/css" href="src/main/resources/stylesheets/index.css">
 
   <!-- Favicon Manifest -->
-  <link rel="manifest" href="favicon/manifest.json">
+  <link rel="manifest" href="src/main/resources/favicon/manifest.json">
 
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
